--- a/client/package.json
+++ b/client/package.json
@@ -13,8 +13,11 @@
     "@reduxjs/toolkit": "^2.7.0",
     "@tailwindcss/vite": "^4.1.4",
     "axios": "^1.8.4",
+    "chart.js": "^4.4.9",
+    "lucide-react": "^0.503.0",
     "notistack": "^3.0.2",
     "react": "^19.0.0",
+    "react-chartjs-2": "^5.3.0",
     "react-dom": "^19.0.0",
     "react-redux": "^9.2.0",
     "react-router-dom": "^7.5.2",
