--- a/client/package.json
+++ b/client/package.json
@@ -27,6 +27,7 @@
     "react-redux": "^9.2.0",
     "react-router-dom": "^7.5.2",
     "react-toastify": "^11.0.5",
+    "swiper": "^11.2.8",
     "tailwindcss": "^4.1.4"
   },
   "devDependencies": {
